--- a/Site/src/public/html/index.html
+++ b/Site/src/public/html/index.html
@@ -53,7 +53,7 @@
         <div class="conteudoScreen1">
             <div class="text">
                 <div class="titulo">Monitore e lucre.</div>
-                <div class="texto"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In ratione quibusdam voluptate cum. Quidem, ipsum est repudiandae minus maiores laborum veritatis corrupti accusamus a in sint commodi adipisci esse blanditiis. </p></div>
+                <div class="texto"><p>Somos uma empresa de  análise de hardware para gestores de equipes de desenvolvimento durante a utilização das IDEs como por exemplo (NetBens, IntelJ, vsCode, Banco de dados) e também para a verificação de possíveis atualizações de sistemas legados e mudanças para Microsserviços. </p></div>
 
                 <button class="efeito">Registre-se já</button>
             </div>
