--- a/Site/src/public/html/index.html
+++ b/Site/src/public/html/index.html
@@ -38,7 +38,7 @@
                     </li>
 
                     <li>
-                        <div class="login"><a href="link">ENTRE</a></div>
+                        <div class="login"><a href="../html/Login/login.html">ENTRAR</a></div>
                     </li>
 
                     <li>
