Visão, Missaõ e valores adicionado no site

--- a/Site/RefazendoSite/Site.html
+++ b/Site/RefazendoSite/Site.html
@@ -60,15 +60,40 @@
                 </div>               
             </div>
 
-            <div class="barquinhoTelaInicial"></div>
+            <div class="barquinhoTelaInicial"><img src="logoBarquinho.png" alt=""></div>
 
         </div>
 
 
         <div class="ondaAzulTelaInicial"></div>
+        <div class="ondaAzulParaBaixo"></div>>
 
     </div>
-    
+
+      <div class="caracteristicasEmpresa">
+          <div class="caracteristicas">
+
+              <div class="missao">
+                  <img src="imagemMissao.png" alt="">
+                  <div class="tituloMissao">Missão</div>
+                  <div class="textoMissao">Roles roles rOleS</div>
+              </div>
+
+              <div class="visao">
+                <img src="imagemVisao.png" alt="">
+                <div class="tituloVisao">Visão</div>
+                <div class="textoVisao">Roles roles rOleS</div>
+              </div>
+
+
+              <div class="valores">
+                <img src="imagemValores.png" alt="">
+                <div class="tituloValores">Valores</div>
+                <div class="textoValores">Roles roles rOleS</div>
+              </div>
+
+          </div>
+      </div>
 
 </body>
 </html>
