--- a/Site/src/public/html/index.html
+++ b/Site/src/public/html/index.html
@@ -104,7 +104,7 @@
             <div class="card">
                 <div class="box">
                     <div class="conteudo">
-                     <img src="FundoCard.avif" alt="">
+                     <img src="../assets/imgs/imgCard1.png" alt="">
                         <!-- <h2>01</h2> -->
                         <h3>Monitoramento de IDEs</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit esse nobis cupiditate voluptas molestias dicta nesciunt nam, i?</p>
@@ -118,7 +118,7 @@
             <div class="card">
                 <div class="box">
                     <div class="conteudo">
-                        <img src="fundoCard.jpg" alt="">
+                        <img src="../assets/imgs/imgCard2.png" alt="">
                         <!-- <h2>02</h2> -->
                         <h3>Monitoramento de Software</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit esse nobis cupiditate voluptas molestias dicta nesciunt nam,?</p>
