--- a/Site/src/public/html/index.html
+++ b/Site/src/public/html/index.html
@@ -100,6 +100,7 @@
       <div class="ondaRoxa"></div>
       <div class="footer">
 
+        <div class="alinharCards">
           <div class="containerCards">
             <div class="card">
                 <div class="box">
@@ -128,7 +129,7 @@
             </div>
         </div>
     
-    
+    </div>
 
 
 
