--- a/Site/src/public/html/index.html
+++ b/Site/src/public/html/index.html
@@ -31,7 +31,7 @@
                <li>|</li>
                <li><a href="Empresa">Empresa</a></li>
                <li>|</li>
-               <li><a href="Login">Login</a></li>
+               <li><a href="tela-login.html">Login</a></li>
                <li>|</li>
                <button class="cadastrar"><a href="cadastrar">Cadastrar</a></button>
            </ul>      
