Troca dos textos em lorem ipsum do site

--- a/Site/src/public/html/index.html
+++ b/Site/src/public/html/index.html
@@ -48,16 +48,11 @@
         <div class="textoEBarquinho">
 
             <div class="textoTelaInicial">
-                <div class="TituloTelaInicial">Monitore e Lucre</div>
+                <div class="TituloTelaInicial">Quem somos nós</div>
 
-                <div class="texto">Lorem ipsum dolor sit,
-                     amet consectetur adipisicing elit. Delectus assumenda,
-                      odit dolor qui aliquid quaerat minima nesciunt ut perferendis quidem,
-                       architecto impedit quo saepe hic quod. Aspernatur perferendis impedit reprehenderit.
-                       Lorem ipsum dolor sit,
-                     amet consectetur adipisicing elit. Delectus assumenda,
-                      odit dolor qui aliquid quaerat minima nesciunt ut perferendis quidem,
-                       architecto impedit quo saepe hic quod. Aspernatur perferendis impedit reprehenderit.
+                <div class="texto">     Nossa equipe é formada por cinco profissionais de tecnologia buscando levar uma melhor solução
+                    para nossos clientes, com transparência e qualidade visando ajudar os profissionais de tecnologia a entregarem projetos
+                    com maior zelo e excelência.
                 </div>               
             </div>
 
@@ -77,20 +72,21 @@
               <div class="missao">
                   <img src="../assets/icons/imagemMissao.png" alt="">
                   <div class="tituloMissao">Missão</div>
-                  <div class="textoMissao">Roles roles rOleS</div>
+                  <div class="textoMissao">Prover eficiência e qualidade na entrega de projetos de T.I</div>
               </div>
 
               <div class="visao">
                 <img src="../assets/icons/imagemVisao.png" alt="">
                 <div class="tituloVisao">Visão</div>
-                <div class="textoVisao">Roles roles rOleS</div>
+                <div class="textoVisao">Ser uma empresa sólida, lucrativa e inovadora, que proporcione qualidade e fluidez
+                    nos projetos dos colaboradores.
+                </div>
               </div>
-
 
               <div class="valores">
                 <img src="../assets/icons/imagemValores.png" alt="">
                 <div class="tituloValores">Valores</div>
-                <div class="textoValores">Roles roles rOleS</div>
+                <div class="textoValores">Promover transparência e confiabilidade nas relações com os colaboradores da empresa. </div>
               </div>
             </div>
             <div class="ondaRoxaValores"></div>
