texto do site finalizado

--- a/Site/src/public/html/index.html
+++ b/Site/src/public/html/index.html
@@ -157,7 +157,7 @@
                      <img src="../assets/imgs/imgCard1.png" alt="">
                          <!-- <h2>01</h2> -->
                          <h3>Monitoramento de IDEs</h3>
-                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit esse nobis cupiditate voluptas molestias dicta nesciunt nam, i?</p>
+                         <p>Análise de hardware para gestores de equipes de desenvolvimento durante a utilização das IDEs como por exemplo (NetBens, IntelJ, vsCode, Banco de dados)</p>
                          <a href="#">Saiba mais</a>
                      </div>
                  </div>
@@ -171,7 +171,9 @@
                          <img src="../assets/imgs/imgCard2.png" alt="">
                          <!-- <h2>02</h2> -->
                          <h3>Monitoramento de Software</h3>
-                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit esse nobis cupiditate voluptas molestias dicta nesciunt nam,?</p>
+                         <p> Oferecemos o melhor software para gestores de equipe de desenvolvimento,
+                           para verificação de produtividade de seus funcionários e
+                            verificação de possíveis sistemas legados </p>
                          <a href="#">Saiba mais</a>
                      </div>
                  </div>
