--- a/Site/public/html/tela-login.html
+++ b/Site/public/html/tela-login.html
@@ -77,7 +77,7 @@
         <label for="password">Senha</label>
         <input type="password" placeholder="Senha" name="senha">
 
-        <button class="btn_navegar">Navegar</button>
+        <button class="btn" onlc>Navegar</button>
         <div class="social">
           <div class="go"><i class="fab fa-google"></i>  Google</div>
           <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
