--- a/Site/public/tela-cadastro.html
+++ b/Site/public/tela-cadastro.html
@@ -8,7 +8,7 @@
     <title>keep Swimming | Cadastro</title>
 
     <script src="../assets/js/funcoes.js"></script>
-    <link rel="stylesheet" href="../css/tela-cadastro.css">
+    <link rel="stylesheet" href="../public/css/tela-cadastro.css">
     <!-- <link rel="stylesheet" href="../css/index.css"> -->
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -25,13 +25,11 @@
             <div class="logoEmpresa">
 
                 <div class="logoNavbar">
-                    <a href="./index.html"><img src="../assets/icons/logoBarquinho.png" alt=""></a>
+                    <a href="./index.html"><img src="../public/assets/icons/logo padrao.png" alt=""></a>
 
                 </div>
 
-                <div class="nomeEmpresa">
-                    <div>Keep Swimming</div>
-                </div>
+                
 
             </div>
 
