--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -142,8 +142,7 @@
                             <div class="slide-content">
                                 <div class="div_text">
                                     <h2>Monitoramento</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique soluta obcaecati accusantium iure porro officia, ab aliquam veritatis provident molestiae ipsum id numquam corporis omnis pariatur, commodi earum perferendis
-                                        cumque.
+                                    <p>A Keep Swimming tem um sistema de monitoramento perfeito para você, acompanhe pelo nosso site e receba em seu celular avisos de como está o sistema de sua equipe.
                                     </p>
                                 </div>
                                 <img src="../public/assets/Gif/WhatsApp Video 2022-04-06 at 20.40.09.gif" alt="">
@@ -153,8 +152,7 @@
                             <div class="slide-content">
                                 <div class="div_text">
                                     <h2>Relatório</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique soluta obcaecati accusantium iure porro officia, ab aliquam veritatis provident molestiae ipsum id numquam corporis omnis pariatur, commodi earum perferendis
-                                        cumque.
+                                    <p>Com nosso sistema você podera visualizar relatórios de desempenho da sua equipe, ajudando na suas tomadas de decisão.
                                     </p>
                                 </div>
                                 <img src="../public/assets/Gif/img2.gif" alt="">
@@ -164,7 +162,8 @@
                             <div class="slide-content">
                                 <div class="div_text">
                                     <h2>produtividade</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ea laudantium excepturi neque quisquam pariatur debitis nam explicabo placeat. Nobis sapiente dicta tenetur! Molestiae alias ut ipsum ea sunt odit!</p>
+                                    <p>Tenha uma melhor produtividade na equipe com nosso sistema, que ajudará a saber se existe algum problema na maquina ou alguma improdutividade
+                                    </p>
                                 </div>
                                 <img src="../public/assets/Gif/img3.gif" alt="">
                             </div>
@@ -173,8 +172,7 @@
                             <div class="slide-content">
                                 <div class="div_text">
                                     <h2>Sucesso</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt accusamus, nam officiis vitae atque perspiciatis a quidem, natus deleniti, omnis repellat expedita molestiae laboriosam facilis vel optio suscipit consectetur
-                                        voluptatum.
+                                    <p>Tenha sucesso nas suas entregas pois com o nosso monitoramento você pode pode desfrutarao maximo todos os recursos do seu time de desenvolvimento.
                                     </p>
                                 </div>
                                 <img src="../public/assets/Gif/img5.gif" alt="">
