--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>KEEP SWIMING</title>
 
     <script src="../assets/js/funcoes.js"></script>
-    <link rel="stylesheet" href="../public/css/index.css">
+
+    <link rel="stylesheet" href="./css/index.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 
 </head>
@@ -21,10 +24,9 @@
             <div class="logoEmpresa">
 
                 <div class="logoNavbar">
-                    <a href="./index.html"><img src="../public/assets/icons/logo padrao.png" alt=""></a>
+                    <a href="./index.html"><img src="./assets/icons/logo-padrao.png" alt=""></a>
 
                 </div>
-
 
             </div>
 
@@ -61,10 +63,6 @@
             </ul>
         </div>
 
-
-
-
-
     </div>
     <div class="content">
         <div class="telaInicial">
@@ -79,41 +77,34 @@
                     </div>
                 </div>
 
-                <div class="barquinhoTelaInicial"><img src="../public/assets/icons/logoBarquinho.png" alt=""></div>
+                <div class="barquinhoTelaInicial"><img src="./assets/icons/logoBarquinho.png" alt=""></div>
 
             </div>
 
             <div class="ondaAzulTelaInicial"></div>
             <div class="ondaAzulParaBaixo"></div>>
 
-
         </div>
     </div>
-
-
-
-
-
-
 
     <div class="caracteristicasEmpresa">
         <div class="caracteristicas">
 
             <div class="missao">
-                <img src="../public/assets/icons/leme.png" alt="">
+                <img src="./assets/icons/leme.png" alt="">
                 <div class="tituloMissao">Missão</div>
                 <div class="textoMissao">Prover eficiência e qualidade na entrega de projetos de T.I</div>
             </div>
 
             <div class="visao">
-                <img src="../public/assets/icons/luneta.png" alt="">
+                <img src="./assets/icons/luneta.png" alt="">
                 <div class="tituloVisao">Visão</div>
                 <div class="textoVisao">Ser uma empresa sólida, lucrativa e inovadora, que proporcione qualidade e fluidez nos projetos dos colaboradores.
                 </div>
             </div>
 
             <div class="valores">
-                <img src="../public/assets/icons/mapa.png" alt="">
+                <img src="./assets/icons/mapa.png" alt="">
                 <div class="tituloValores">Valores</div>
                 <div class="textoValores">Promover transparência e confiabilidade nas relações com os colaboradores da empresa. </div>
             </div>
@@ -122,12 +113,7 @@
         <div class="ondaRoxaValoresBaixo"></div>
     </div>
 
-
-
-
     <!-- CARROSEL -->
-
-
 
     <div class="telaVeniti">
         <div id="slider">
@@ -145,7 +131,7 @@
                                     <p>A Keep Swimming tem um sistema de monitoramento perfeito para você, acompanhe pelo nosso site e receba em seu celular avisos de como está o sistema de sua equipe.
                                     </p>
                                 </div>
-                                <img src="../public/assets/Gif/WhatsApp Video 2022-04-06 at 20.40.09.gif" alt="">
+                                <img src="./assets/Gif/WhatsApp Video 2022-04-06 at 20.40.09.gif" alt="">
                             </div>
                         </div>
                         <div class="slide slide_2">
@@ -155,7 +141,7 @@
                                     <p>Com nosso sistema você podera visualizar relatórios de desempenho da sua equipe, ajudando na suas tomadas de decisão.
                                     </p>
                                 </div>
-                                <img src="../public/assets/Gif/img2.gif" alt="">
+                                <img src="./assets/Gif/img2.gif" alt="">
                             </div>
                         </div>
                         <div class="slide slide_3">
@@ -165,7 +151,7 @@
                                     <p>Tenha uma melhor produtividade na equipe com nosso sistema, que ajudará a saber se existe algum problema na maquina ou alguma improdutividade
                                     </p>
                                 </div>
-                                <img src="../public/assets/Gif/img3.gif" alt="">
+                                <img src="./assets/Gif/img3.gif" alt="">
                             </div>
                         </div>
                         <div class="slide slide_4">
@@ -175,7 +161,7 @@
                                     <p>Tenha sucesso nas suas entregas pois com o nosso monitoramento você pode pode desfrutarao maximo todos os recursos do seu time de desenvolvimento.
                                     </p>
                                 </div>
-                                <img src="../public/assets/Gif/img5.gif" alt="">
+                                <img src="./assets/Gif/img5.gif" alt="">
                             </div>
                         </div>
                     </div>
@@ -198,11 +184,8 @@
 
     </div>
 
-
     <div class="ondaRoxaFooterCima"></div>
     <div class="ondaRoxaFooterBaixo"></div>
-
-
 
     <div class="footer">
 
@@ -211,7 +194,7 @@
                 <div class="card">
                     <div class="box">
                         <div class="conteudo">
-                            <img src="../public/assets/imgs/imgCard1.png" alt="">
+                            <img src="./assets/imgs/imgCard1.png" alt="">
                             <!-- <h2>01</h2> -->
                             <h3>Monitoramento de IDEs</h3>
                             <p>Análise de hardware para gestores de equipes de desenvolvimento durante a utilização das IDEs como por exemplo (NetBens, IntelJ, vsCode, Banco de dados)</p>
@@ -225,7 +208,7 @@
                 <div class="card">
                     <div class="box">
                         <div class="conteudo">
-                            <img src="../public/assets/imgs/imgCard2.png" alt="">
+                            <img src="./assets/imgs/imgCard2.png" alt="">
                             <!-- <h2>02</h2> -->
                             <h3>Monitoramento de Software</h3>
                             <p> Oferecemos o melhor software para gestores de equipe de desenvolvimento, para verificação de produtividade de seus funcionários e verificação de possíveis sistemas legados </p>
@@ -236,22 +219,16 @@
             </div>
         </div>
 
-
     </div>
-
 
     <div class="block">
         <div class="contatoarea">
 
-
-
             <div class="imagensFooter">
-                <img src="../public/assets/imgs/twitter.png" alt="" height="50px">
-                <img src="../public/assets/imgs/instagram.png" alt="" height="50px">
-                <img src="../public/assets/imgs/facebook.png" alt="" height="50px">
+                <img src="./assets/imgs/twitter.png" alt="" height="50px">
+                <img src="./assets/imgs/instagram.png" alt="" height="50px">
+                <img src="./assets/imgs/facebook.png" alt="" height="50px">
             </div>
-
-
 
             <div class="contatoinfo">
                 <div><i class="fas fa-map-marker-alt"></i>Rua Haddock Lobo, 595 São Paulo - SP</div>
@@ -259,7 +236,6 @@
                 <div><i class="fas fa-phone"></i>11-4002-8922</div>
                 <div><i class="fas fa-clock"></i>De segunda a sexta 16:30 a 21:30</div>
             </div>
-
 
             <div class="contato-form">
                 <!-- <h2>Contato</h2> -->
@@ -275,13 +251,10 @@
      
      </div>
 
-
      <div class="ondaAzulFooter "></div>  
 
      </div>
       
-
-
 </body>
 </html>
 <script src="app.js "></script>
