feat - tela de cadastro dentro da dash

--- a/Site/Dash-estatica/dashboard.html
+++ b/Site/Dash-estatica/dashboard.html
@@ -22,12 +22,7 @@
 <body>
 
     <div class="header"></div>
-    <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-    <label for="openSidebarMenu" class="sidebarIconToggle">
-        <div class="spinner diagonal part-1"></div>
-        <div class="spinner horizontal"></div>
-        <div class="spinner diagonal part-2"></div>
-    </label>
+
     <div id="sidebarMenu">
         <ul class="sidebarMenuInner">
             <li>Keep <span>Swimming</span></li>
@@ -55,7 +50,7 @@
             </div>
         </div>
     </div>
-    <div class="centralizar">
+    <!-- <div class="centralizar">
         <main class="cards1">
             <section class="card1 contact">
                 <div class="icon">
@@ -86,12 +81,11 @@
                 <button>Comprar</button>
             </section>
         </main>
-    </div>
-    <div class="graph">
+    </div> -->
+    <!-- <div class="graph">
         <canvas id="canvas_grafico"></canvas>
-    </div>
-    </div>
-    </div>
+    </div> -->
+    
 
 
 
