login abrindo dash

--- a/Site/public/tela-login.html
+++ b/Site/public/tela-login.html
@@ -20,7 +20,7 @@
 <body>
 
     <div class="logoEmpresa">
-        <a href="./index.html"><img src="../public/assets/icons/setas-traseiras.png" alt="" class="setaVoltar"> </a>
+        <a href="./index.html"><img src="./assets/icons/setas-traseiras.png" alt="" class="setaVoltar"> </a>
         <div class="logoNavbar">
             <a href="./index.html"><img src="./assets/icons/logo-padrao.png" alt=""></a>
 
@@ -121,7 +121,7 @@
                     sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function() {
-                        window.location = "./Dash-estatica/dashboard.html";
+                        window.location = "./dash-estatica/dashboard.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
