--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -22,7 +22,7 @@
 
             <div class="logoEmpresa">
                 <div class="logoNavbar">
-                    <a href="./index.html"><img src="../public/assets/icons/logo-padrao.png" alt=""></a>
+                    <a href="./index.html"><img src="./assets/icons/logo-padrao.png" alt=""></a>
 
                 </div>
 
@@ -78,7 +78,7 @@
 
 
 
-                <div class="barquinhoTelaInicial"><img src="../public/assets/icons/braco-teste.png" alt=""></div>
+                <div class="barquinhoTelaInicial"><img src="./assets/icons/braco-teste.png" alt=""></div>
 
 
             </div>
