acertos na dash

--- a/Site/public/dash-estatica/dash-cadastros.html
+++ b/Site/public/dash-estatica/dash-cadastros.html
@@ -27,11 +27,12 @@
             <ul class="sidebarMenuInner">
                 <li><b style="color:rgb(136, 136, 136)"> <img src="./dash.png" alt="" height="25px"> Dashboard</b></li>
                 <li> <a href="graficos.html"><img src="./monitoramento.png" alt="" height="25px">Monitoramento</a></li>
+                <li> <a href="dash-cadastros.html"><img src="./perfil.png" alt="" height="25px">Cadastrar Desenvolvedor</a></li>
                 <li> <a href="https://app.pipefy.com/public/form/w7YSTr_A">
                         <img src="./suporte.png" alt="" height="25px"> Suporte</a></li>
-                <li><a href="index.html">
+                <li><a href="../index.html">
                         <div class="sair">
-                            <img src="./logout 1.png" alt="" height="25px">
+                            <img src="./logout 1.png" alt="" height="50px">
                         </div>
                     </a></li>
             </ul>
