--- a/Site/public/dash-estatica/dashboard.html
+++ b/Site/public/dash-estatica/dashboard.html
@@ -31,20 +31,19 @@
         <div id="sidebarMenu">
             <ul class="sidebarMenuInner">
                 <li><b style="color:rgb(136, 136, 136)"> <img src="./dash.png" alt="" height="25px"> Dashboard</b></li>
-                <li> <a href="graficos.html"><img src="./monitoramento.png" alt="" height="25px">Monitoramento</a></li>
-                <li> <a href="https://app.pipefy.com/public/form/w7YSTr_A">
+                <li><a href="graficos.html"><img src="./monitoramento.png" alt="" height="25px">Monitoramento</a></li>
+                <li><a href="dash-cadastros.html"><img src="./perfil.png" alt="" height="25px">Cadastrar Desenvolvedor</a></li>
+                <li><a href="https://app.pipefy.com/public/form/w7YSTr_A">
                         <img src="./suporte.png" alt="" height="25px"> Suporte</a></li>
-                <li><a href="index.html">
+                <li><a href="../index.html">
                         <div class="sair">
-                            <img src="./logout 1.png" alt="" height="25px">
+                            <img src="./logout 1.png" alt="" height="50px">
                         </div>
                     </a></li>
             </ul>
         </div>
 
         <div id='center' class="main center">
-
-
 
             <div class="grafico3">
                 <div class="retangulo">
@@ -146,7 +145,7 @@
                     data: {
                         labels: vagas,
                         datasets: [{
-                            label: 'Tempo de permanência por vaga',
+                            label: 'Tempo de uso diário',
                             data: totalHoras,
                             backgroundColor: [
                                 'rgba(95, 99, 132, 0.2)',
@@ -192,7 +191,7 @@
                 color: 'black',
                 labels: ['Domingo', 'Segunda', 'Terca', 'Quarta', 'Quinta', 'Sexta', 'Sabado'],
                 datasets: [{
-                    label: 'Tempo de permanência por vaga',
+                    label: 'Tempo de uso por dia',
                     data: [9, 13, 11, 12, 15, 17, 21, 19],
                     backgroundColor: [
                         graidient,
