--- a/Site/public/tela-login.html
+++ b/Site/public/tela-login.html
@@ -118,7 +118,7 @@
 
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
+                    sessionStorage.ID_USUARIO = json.idEmpresa;
 
                     setTimeout(function() {
                         window.location = "./dash-estatica/dashboard.html";
